# memory-mesh

./: .gitignore  Makefile  README.md  pyproject.toml
.sourceos/: manifest.json
artifacts/: models.lock.yaml
docs/: content-memory-and-recall.md  workspace-recall-promotion.md
images/: memoryd.Dockerfile
schemas/: agent-harness-memory-ledger.schema.json  agent-learning-proposal.schema.json  channel-provenance-memory-write-gate.schema.json  governed-learning-lifecycle-record.schema.json  governed-learning-review-queue-metrics.schema.json  lampstand-adapter-record-promotion-packet.schema.json  ops-history-context-pack.schema.json  professional-intelligence-context-pack.schema.json  scenario-learning-proposal-binding.schema.json  slash-topic-memory-profile.schema.json  wallguard-memory-compartment-gate.schema.json  workspace-recall-promotion-packet.schema.json
scripts/: create_agent_learning_proposal.py  import_upstreams.py  render_import_plan.py  validate-prophet-mesh-scope-mirror.mjs  validate_agent_harness_memory_ledger.py  validate_agent_learning_proposal.py  validate_agent_learning_proposal_generator.py  validate_channel_provenance_write_gate.py  validate_deploy_assets.py  validate_governed_learning_lifecycle.py  validate_lampstand_adapter_record_promotion_packet.py  validate_ops_history_context_pack.py  validate_professional_intelligence_context_pack.py  validate_scenario_learning_proposal_binding.py  validate_slash_topic_memory_profile.py  validate_upstreams.py  validate_wallguard_memory_compartment_gate.py  validate_workspace_recall_promotion_packet.py
(+117 files in other folders)
