[project]
name = "memory-mesh-upstream"
version = "0.2.0"
description = "Upstream baseline for the SocioProphet memory mesh runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "pydantic>=1.10,<3",
  "psycopg[binary]>=3.2,<4",
]

[tool.pytest.ini_options]
testpaths = ["services/memoryd/tests"]
